--- a/sql_basics.ipynb
+++ b/sql_basics.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -701,9 +701,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<th>product_id</th>\n",
+       "<th>product</th>\n",
+       "<th>price</th>\n",
+       "<th>supplier_id</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>14</td>\n",
+       "<td>shoelace</td>\n",
+       "<td>0.5</td>\n",
+       "<td>8787</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>22</td>\n",
+       "<td>potato</td>\n",
+       "<td>0.99</td>\n",
+       "<td>65656</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>13</td>\n",
+       "<td>fork</td>\n",
+       "<td>1.99</td>\n",
+       "<td>86787</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>11</td>\n",
+       "<td>teapot</td>\n",
+       "<td>12.49</td>\n",
+       "<td>6565</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>12</td>\n",
+       "<td>bike</td>\n",
+       "<td>123.5</td>\n",
+       "<td>232</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>66</td>\n",
+       "<td>door</td>\n",
+       "<td>159.99</td>\n",
+       "<td>9889</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>555</td>\n",
+       "<td>hammer</td>\n",
+       "<td>17.49</td>\n",
+       "<td>7878</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>44</td>\n",
+       "<td>rake</td>\n",
+       "<td>19.99</td>\n",
+       "<td>65656</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>232</td>\n",
+       "<td>cup</td>\n",
+       "<td>2.5</td>\n",
+       "<td>4333</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>22</td>\n",
+       "<td>pencil</td>\n",
+       "<td>2.99</td>\n",
+       "<td>3232</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>28</td>\n",
+       "<td>ball</td>\n",
+       "<td>5.5</td>\n",
+       "<td>2323</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>33</td>\n",
+       "<td>shoe horn</td>\n",
+       "<td>5.99</td>\n",
+       "<td>3434</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>123</td>\n",
+       "<td>table</td>\n",
+       "<td>78.55</td>\n",
+       "<td>54545</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+------------+-----------+--------+-------------+\n",
+       "| product_id | product   | price  | supplier_id |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 14         | shoelace  | 0.5    | 8787        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 22         | potato    | 0.99   | 65656       |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 13         | fork      | 1.99   | 86787       |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 11         | teapot    | 12.49  | 6565        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 12         | bike      | 123.5  | 232         |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 66         | door      | 159.99 | 9889        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 555        | hammer    | 17.49  | 7878        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 44         | rake      | 19.99  | 65656       |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 232        | cup       | 2.5    | 4333        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 22         | pencil    | 2.99   | 3232        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 28         | ball      | 5.5    | 2323        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 33         | shoe horn | 5.99   | 3434        |\n",
+       "+------------+-----------+--------+-------------+\n",
+       "| 123        | table     | 78.55  | 54545       |\n",
+       "+------------+-----------+--------+-------------+"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SELECT \n",
     "    * \n",
@@ -741,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -798,7 +925,7 @@
        "+----------+----------+------------+----------+"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -897,7 +1024,7 @@
        "+----------+----------+------------+----------+"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -993,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1073,7 +1200,7 @@
        "+----------+------------+------------+"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1187,7 +1314,7 @@
        "+----------+----------+-----------+-------+"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1309,7 +1436,7 @@
        "+----------+----------+------------+-----------+-------+"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1437,7 +1564,7 @@
        "+----------+----------+------------+-----------+-------+------------+"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1528,7 +1655,7 @@
        "+----------+----------+------------+---------+-------+------------+"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1642,7 +1769,7 @@
        "+----------+----------+------------+---------+-------+------------+"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,16 +1821,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<th>product_id</th>\n",
+       "<th>SUM(quantity)       -- SUM() is our aggregate function</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>12</td>\n",
+       "<td>3</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>123</td>\n",
+       "<td>2</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>212</td>\n",
+       "<td>2</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>232</td>\n",
+       "<td>4</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>28</td>\n",
+       "<td>1</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>33</td>\n",
+       "<td>1</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>44</td>\n",
+       "<td>1</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+------------+--------------------------------------------------------+\n",
+       "| product_id | SUM(quantity)       -- SUM() is our aggregate function |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 12         | 3                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 123        | 2                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 212        | 2                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 232        | 4                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 28         | 1                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 33         | 1                                                      |\n",
+       "+------------+--------------------------------------------------------+\n",
+       "| 44         | 1                                                      |\n",
+       "+------------+--------------------------------------------------------+"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SELECT \n",
-    "    product_id\n",
+    "    product_id,\n",
     "    SUM(quantity)       -- SUM() is our aggregate function\n",
     "FROM\n",
     "    orders\n",
@@ -1723,6 +1913,188 @@
     "<center><h1>Challenge Question:</h1></center> \n",
     "\n",
     "Write a SQL query that returns the total revenue collected across all sales. As a hint, this will need to involve a `JOIN`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<th>order_total</th>\n",
+       "<th>order_id</th>\n",
+       "<th>customer</th>\n",
+       "<th>date</th>\n",
+       "<th>product_id</th>\n",
+       "<th>quantity</th>\n",
+       "<th>product_id</th>\n",
+       "<th>product</th>\n",
+       "<th>price</th>\n",
+       "<th>supplier_id</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>19.99</td>\n",
+       "<td>1</td>\n",
+       "<td>lee</td>\n",
+       "<td>2018-12-23</td>\n",
+       "<td>44</td>\n",
+       "<td>1</td>\n",
+       "<td>44</td>\n",
+       "<td>rake</td>\n",
+       "<td>19.99</td>\n",
+       "<td>65656</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>5.99</td>\n",
+       "<td>2</td>\n",
+       "<td>smith</td>\n",
+       "<td>2020-03-12</td>\n",
+       "<td>33</td>\n",
+       "<td>1</td>\n",
+       "<td>33</td>\n",
+       "<td>shoe horn</td>\n",
+       "<td>5.99</td>\n",
+       "<td>3434</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>123.5</td>\n",
+       "<td>4</td>\n",
+       "<td>yang</td>\n",
+       "<td>2020-09-12</td>\n",
+       "<td>12</td>\n",
+       "<td>1</td>\n",
+       "<td>12</td>\n",
+       "<td>bike</td>\n",
+       "<td>123.5</td>\n",
+       "<td>232</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>247.0</td>\n",
+       "<td>5</td>\n",
+       "<td>guerra </td>\n",
+       "<td>2020-08-03</td>\n",
+       "<td>12</td>\n",
+       "<td>2</td>\n",
+       "<td>12</td>\n",
+       "<td>bike</td>\n",
+       "<td>123.5</td>\n",
+       "<td>232</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>157.1</td>\n",
+       "<td>6</td>\n",
+       "<td>diaz</td>\n",
+       "<td>2020-11-28</td>\n",
+       "<td>123</td>\n",
+       "<td>2</td>\n",
+       "<td>123</td>\n",
+       "<td>table</td>\n",
+       "<td>78.55</td>\n",
+       "<td>54545</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>10.0</td>\n",
+       "<td>7</td>\n",
+       "<td>riley</td>\n",
+       "<td>2019-05-18</td>\n",
+       "<td>232</td>\n",
+       "<td>4</td>\n",
+       "<td>232</td>\n",
+       "<td>cup</td>\n",
+       "<td>2.5</td>\n",
+       "<td>4333</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>5.5</td>\n",
+       "<td>8</td>\n",
+       "<td>chan</td>\n",
+       "<td>2018-10-03</td>\n",
+       "<td>28</td>\n",
+       "<td>1</td>\n",
+       "<td>28</td>\n",
+       "<td>ball</td>\n",
+       "<td>5.5</td>\n",
+       "<td>2323</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| order_total | order_id | customer | date       | product_id | quantity | product_id | product   | price | supplier_id |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 19.99       | 1        | lee      | 2018-12-23 | 44         | 1        | 44         | rake      | 19.99 | 65656       |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 5.99        | 2        | smith    | 2020-03-12 | 33         | 1        | 33         | shoe horn | 5.99  | 3434        |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 123.5       | 4        | yang     | 2020-09-12 | 12         | 1        | 12         | bike      | 123.5 | 232         |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 247.0       | 5        | guerra   | 2020-08-03 | 12         | 2        | 12         | bike      | 123.5 | 232         |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 157.1       | 6        | diaz     | 2020-11-28 | 123        | 2        | 123        | table     | 78.55 | 54545       |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 10.0        | 7        | riley    | 2019-05-18 | 232        | 4        | 232        | cup       | 2.5   | 4333        |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+\n",
+       "| 5.5         | 8        | chan     | 2018-10-03 | 28         | 1        | 28         | ball      | 5.5   | 2323        |\n",
+       "+-------------+----------+----------+------------+------------+----------+------------+-----------+-------+-------------+"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SELECT \n",
+    "    \n",
+    "    (price*quantity) AS order_total,\n",
+    "    *\n",
+    "FROM \n",
+    "    orders  \n",
+    "    JOIN products ON orders.product_id = products.product_id\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr>\n",
+       "<th>total_revenue</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>569.08</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------------+\n",
+       "| total_revenue |\n",
+       "+---------------+\n",
+       "| 569.08        |\n",
+       "+---------------+"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SELECT \n",
+    "SUM(quantity * price) AS total_revenue\n",
+    "FROM\n",
+    "orders AS o\n",
+    "JOIN products AS p ON o.product_id = p.product_id"
    ]
   },
   {
@@ -1749,9 +2121,9 @@
    "file_extension": "",
    "mimetype": "",
    "name": "sqlite3",
-   "version": "3.30.1"
+   "version": "3.33.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
